--- a/index.html
+++ b/index.html
@@ -1,124 +1,144 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proclamation Wall</title>
-    <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: url('wall2.jpg') repeat center center/cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            overflow-y: auto;
-            height: 100vh;
-        }
-        .navbar {
-            width: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px 0;
-            text-align: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1000;
-        }
-        .navbar a {
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-            margin: 0 15px;
-            font-family: Arial, sans-serif;
-        }
-        .stats-container {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            color: white;
-            margin-top: 80px;
-        }
-        .stats-container h2 {
-            margin-bottom: 15px;
-            font-size: 24px;
-        }
-        .stats-box {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .stats-box div {
-            background: linear-gradient(to right, #ff8c00, #ff0080);
-            padding: 10px;
-            border-radius: 8px;
-            font-size: 18px;
-            font-weight: bold;
-        }
-        .wall {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            padding: 20px;
-        }
-        .proclamation {
-            background: #5a3e1b;
-            width: 180px;
-            height: 260px;
-            padding: 10px;
-            text-align: center;
-            color: #fff;
-            border: 8px solid #3b2710;
-            border-radius: 5px;
-            position: relative;
-            box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
-            font-family: 'Old Standard TT', serif;
-        }
-        .proclamation h2 {
-            font-size: 16px;
-            margin: 0;
-            padding: 5px;
-            background: rgba(0,0,0,0.7);
-            color: #f4d47c;
-        }
-        .proclamation p {
-            font-size: 12px;
-            background: rgba(255,255,255,0.9);
-            padding: 8px;
-            color: #333;
-            font-style: italic;
-            border-radius: 3px;
-        }
-    </style>
-</head>
-<body>
-    <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Rules</a>
-        <a href="#">Contact</a>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
+		<script src="https://unpkg.com/unlazy@0.11.3/dist/unlazy.with-hashing.iife.js" defer init></script>
+		<script type="text/javascript">
+			window.tailwind.config = {
+				darkMode: ['class'],
+				theme: {
+					extend: {
+						colors: {
+							border: 'hsl(var(--border))',
+							input: 'hsl(var(--input))',
+							ring: 'hsl(var(--ring))',
+							background: 'hsl(var(--background))',
+							foreground: 'hsl(var(--foreground))',
+							primary: {
+								DEFAULT: 'hsl(var(--primary))',
+								foreground: 'hsl(var(--primary-foreground))'
+							},
+							secondary: {
+								DEFAULT: 'hsl(var(--secondary))',
+								foreground: 'hsl(var(--secondary-foreground))'
+							},
+							destructive: {
+								DEFAULT: 'hsl(var(--destructive))',
+								foreground: 'hsl(var(--destructive-foreground))'
+							},
+							muted: {
+								DEFAULT: 'hsl(var(--muted))',
+								foreground: 'hsl(var(--muted-foreground))'
+							},
+							accent: {
+								DEFAULT: 'hsl(var(--accent))',
+								foreground: 'hsl(var(--accent-foreground))'
+							},
+							popover: {
+								DEFAULT: 'hsl(var(--popover))',
+								foreground: 'hsl(var(--popover-foreground))'
+							},
+							card: {
+								DEFAULT: 'hsl(var(--card))',
+								foreground: 'hsl(var(--card-foreground))'
+							},
+						},
+					}
+				}
+			}
+		</script>
+		<style type="text/tailwindcss">
+			@layer base {
+				:root {
+					--background: 0 0% 100%;
+--foreground: 240 10% 3.9%;
+--card: 0 0% 100%;
+--card-foreground: 240 10% 3.9%;
+--popover: 0 0% 100%;
+--popover-foreground: 240 10% 3.9%;
+--primary: 240 5.9% 10%;
+--primary-foreground: 0 0% 98%;
+--secondary: 240 4.8% 95.9%;
+--secondary-foreground: 240 5.9% 10%;
+--muted: 240 4.8% 95.9%;
+--muted-foreground: 240 3.8% 46.1%;
+--accent: 240 4.8% 95.9%;
+--accent-foreground: 240 5.9% 10%;
+--destructive: 0 84.2% 60.2%;
+--destructive-foreground: 0 0% 98%;
+--border: 240 5.9% 90%;
+--input: 240 5.9% 90%;
+--ring: 240 5.9% 10%;
+--radius: 0.5rem;
+				}
+				.dark {
+					--background: 240 10% 3.9%;
+--foreground: 0 0% 98%;
+--card: 240 10% 3.9%;
+--card-foreground: 0 0% 98%;
+--popover: 240 10% 3.9%;
+--popover-foreground: 0 0% 98%;
+--primary: 0 0% 98%;
+--primary-foreground: 240 5.9% 10%;
+--secondary: 240 3.7% 15.9%;
+--secondary-foreground: 0 0% 98%;
+--muted: 240 3.7% 15.9%;
+--muted-foreground: 240 5% 64.9%;
+--accent: 240 3.7% 15.9%;
+--accent-foreground: 0 0% 98%;
+--destructive: 0 62.8% 30.6%;
+--destructive-foreground: 0 0% 98%;
+--border: 240 3.7% 15.9%;
+--input: 240 3.7% 15.9%;
+--ring: 240 4.9% 83.9%;
+				}
+			}
+		</style>
+  </head>
+  <body>
+    
+
+<div class="bg-background bg-opacity-90 p-6 rounded-lg shadow-lg relative" style="background-image: url('image.png'); background-size: cover;">
+  <div class="absolute inset-0 bg-black bg-opacity-70 z-10"></div>
+  <h1 class="text-white text-4xl font-bold mb-6 text-center relative z-20">Hacknovate 5.0 Glimpse</h1>
+  <div class="flex flex-col md:flex-row relative z-20">
+    <div class="w-full md:w-1/2 p-4">
+      <div class="bg-black bg-opacity-40 p-4 rounded-lg max-w-md mx-auto">
+  <h2 class="text-white text-lg font-semibold mb-2">Statistics</h2>
+  <ul class="text-white space-y-1">
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">Registration: <strong>5000+</strong></li>
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">Hackers: <strong>800+</strong></li>
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">Teams: <strong>200+</strong></li>
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">Projects: <strong>150+</strong></li>
+  </ul>
+
+  <h2 class="text-white text-lg font-semibold mt-3 mb-2">Engagement Metrics</h2>
+  <ul class="text-white space-y-1">
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">50k+ accounts reached</li>
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">4635 likes</li>
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">1.5 lakh+ views on reels</li>
+    <li class="bg-gradient-to-r from-pink-500 to-purple-500 p-2 rounded-md text-sm">3.5 lakh+ website reach</li>
+  </ul>
+</div>
+
+
     </div>
-    <div class="stats-container">
-        <h2>Hacknovate 5.0 Glimpse</h2>
-        <div class="stats-box">
-            <div>Registration: 5000+</div>
-            <div>Hackers: 800+</div>
-            <div>Teams: 200+</div>
-            <div>Projects: 150+</div>
-            <div>50k+ accounts reached</div>
-            <div>1.5 lakhs+ views on reels</div>
-            <div>3.5 lakhs+ reach on website</div>
-            <div>4635 Likes</div>
-        </div>
+    <div class="w-full md:w-1/2 p-4 relative" style="background-image: url('#); background-size: cover;">
+      <div class="grid grid-cols-2 gap-4">
+        <img src="1.JPG" alt="Hackathon participants" class="rounded-lg" />
+        <img src="2.JPG" alt="Group photo with Hacknovate banner" class="rounded-lg" />
+        <img src="3.JPG" alt="Award ceremony" class="rounded-lg" />
+        <img src="4.JPG" alt="Technical discussions" class="rounded-lg" />
+      </div>
+      <div class="flex justify-center absolute inset-0 items-center" style="top: -20px;">
+        <img src="h5.webp" alt="Hacknovate V logo" class="rounded-lg" style="width: 250px; height: 65px;" />
+      </div>
+      
     </div>
-    <div class="wall">
-        <div class="proclamation"><h2>PROCLAMATION No. 1</h2><p>Rule 1 must be followed.</p></div>
-        <div class="proclamation"><h2>PROCLAMATION No. 2</h2><p>Rule 2 must be followed.</p></div>
-        <div class="proclamation"><h2>PROCLAMATION No. 3</h2><p>Rule 3 must be followed.</p></div>
-    </div>
-</body>
+  </div>
+</div>
+
+
+  </body>
 </html>
