--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   <body>
     
 
-<div class="bg-background bg-opacity-90 p-6 rounded-lg shadow-lg relative" style="background-image: url('image.png'); background-size: cover;">
-  <div class="absolute inset-0 bg-black bg-opacity-70 z-10"></div>
+	<div class="bg-background bg-opacity-90 p-6 rounded-lg shadow-lg relative" style="background: url('image.png') no-repeat center center / cover; height: 100vh;">
+		<div class="absolute inset-0 bg-black bg-opacity-70 z-10"></div>
   <h1 class="text-white text-4xl font-bold mb-6 text-center relative z-20">Hacknovate 5.0 Glimpse</h1>
   <div class="flex flex-col md:flex-row relative z-20">
     <div class="w-full md:w-1/2 p-4">
